[package]
name = "serp-staking-rewards"
version = "3.0.0"
authors = ["Setheum Labs"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://setheum.xyz"
repository = "https://github.com/Setheum-Labs/serp-staking/"
description = "Rewards for Setheum SERP staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]

[dependencies]
sp-arithmetic = { version = "3.0.0", default-features = false }
log = { version = "0.4.14", default-features = false }

[features]
default = ["std"]
std = [
	"sp-arithmetic/std",
	"log/std",
]